Update tmux configuration for latest version of tmux

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -6,7 +6,7 @@ set-option -g prefix C-t
 set -g base-index 1
 
 # use all the colours
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # reload configuration
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
@@ -18,7 +18,7 @@ set -g status-left ""
 set -g status-right "%a %d %b %H:%M"
 
 # active window in status bar
-set-window-option -g window-status-current-bg red
+set -g window-status-current-style bg=red,fg=white
 
 # enable mouse mode
 #set -g mouse on
