--- a/_tmux.conf
+++ b/_tmux.conf
@@ -12,13 +12,13 @@ set -g default-terminal "screen-256color"
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # status bar
-set -g status-bg colour235
+set -g status-bg colour60
 set -g status-fg white
-set -g status-left ""
-set -g status-right "%a %d %b %H:%M"
+set -g status-left " "
+set -g status-right "%a %d %b %H:%M "
 
 # active window in status bar
-set -g window-status-current-style bg=red,fg=white
+set -g window-status-current-style bg=colour160,fg=white
 
 # enable mouse mode
 #set -g mouse on
