--- a/_tmux.conf
+++ b/_tmux.conf
@@ -6,7 +6,7 @@ set-option -g prefix C-t
 set -g base-index 1
 
 # use all the colours
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # reload configuration
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
